// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getUniqueKanji() should have a safe default 1`] = `Array []`;

exports[`getUniqueKanji() should return unique kanji when multiple same characters 1`] = `
Array [
  "近",
]
`;

exports[`getUniqueKanji() should return unique kanji when single entry 1`] = `
Array [
  "売",
  "上",
]
`;

exports[`getUniqueKanji() should work with mixed 1`] = `
Array [
  "形",
  "人",
  "迷",
  "惑",
  "烏",
  "龍",
  "茶",
  "缶",
]
`;

exports[`getUniqueKanji() should work with only kana 1`] = `Array []`;

exports[`getUniqueKanji() should work with prefixes 1`] = `
Array [
  "各",
]
`;

exports[`getUniqueKanji() should work with suffixes 1`] = `
Array [
  "漬",
  "才",
]
`;

exports[`splitKanji() should have a safe default 1`] = `Array []`;

exports[`splitKanji() should only return kanji 1`] = `
Array [
  "売",
  "上",
]
`;

exports[`splitKanji() should only return kanji 2`] = `
Array [
  "各",
]
`;

exports[`splitKanji() should only return kanji 3`] = `
Array [
  "漬",
]
`;

exports[`splitKanji() should only return kanji 4`] = `
Array [
  "才",
]
`;

exports[`splitKanji() should only return kanji with mixed 1`] = `
Array [
  "形",
]
`;

exports[`splitKanji() should only return kanji with mixed 2`] = `
Array [
  "人",
]
`;

exports[`splitKanji() should only return kanji with mixed 3`] = `
Array [
  "迷",
  "惑",
]
`;

exports[`splitKanji() should only return kanji with mixed 4`] = `
Array [
  "烏",
  "龍",
  "茶",
]
`;

exports[`splitKanji() should only return kanji with mixed 5`] = `
Array [
  "缶",
]
`;

exports[`splitKanji() should return empty array when no kanji 1`] = `Array []`;

exports[`splitKanji() should return empty array when no kanji 2`] = `Array []`;
